# kubernetesyamlgenerator

./: .gitignore  README.md  debug_models.py  main.py  pyproject.toml
devops_cli/: cli.py
devops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devops_cli/generators/: k8s_generator.py
devops_cli/models/: k8s.py
devops_cli/renderers/: yaml_renderer.py
devops_cli/validators/: k8s_validator.py
k8s/: web-scraping-worker-deployment.yaml
